[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nonebot_plugin_aichat_baize"
version = "2.0.0"
description = "NoneBot2 AI 智能对话插件，支持 DeepSeek / SiliconFlow API，多轮对话+人设切换+Token统计"
license = { text = "MIT" }
authors = [{ name = "Baize", email = "2491434931@qq.com" }]
readme = "README.md"
keywords = ["nonebot", "nonebot2", "deepseek", "siliconflow", "ai", "chat", "persona"]
requires-python = ">=3.10"
dependencies = [
  "nonebot2>=2.2.0",
  "httpx>=0.23",
  "Pillow>=9.0",
]

[project.urls]
Homepage = "https://github.com/sangonomiya249/nonebot_plugin_aichat_baize"
Repository = "https://github.com/sangonomiya249/nonebot_plugin_aichat_baize"

[project.entry-points."nonebot2.plugin"]
nonebot_plugin_aichat_baize = "nonebot_plugin_aichat_baize:__plugin_meta__"
